Fixed styling for header on mobile. Moved styles for header, footer etc into the style directory

--- a/styles/front-page.module.css
+++ b/styles/front-page.module.css
@@ -4,6 +4,12 @@
   gap: 2rem;
 }
 
+@media (max-width: 600px) {
+  .cardGrid {
+    grid-template-columns: 1fr;
+  }
+}
+
 .card {
   padding: 1.5rem;
   border: 1px solid #e1e1e1;
@@ -41,6 +47,9 @@
   border: 1px solid #e1e1e1;
   border-radius: 0.5rem;
   line-height: 1.5;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 .information h1 {
   font-size: 2rem;
