--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -32,3 +32,20 @@
 .nav ul li:last-child {
   margin-right: 0;
 }
+
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .brand,
+  .nav {
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+
+  .nav {
+    margin-top: 1rem;
+  }
+}
